--- a/AspireYouTubeSummariser.AppHost/AspireYouTubeSummariser.AppHost.csproj
+++ b/AspireYouTubeSummariser.AppHost/AspireYouTubeSummariser.AppHost.csproj
@@ -11,6 +11,12 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="8.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\frontend\AspireYouTubeSummariser.WebApp\AspireYouTubeSummariser.WebApp.csproj" />
+    <ProjectReference Include="..\backend\AspireYouTubeSummariser.ApiApp\AspireYouTubeSummariser.ApiApp.csproj" />
   </ItemGroup>
 
 </Project>
