--- a/AspireYouTubeSummariser.AppHost/appsettings.json
+++ b/AspireYouTubeSummariser.AppHost/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "OpenAI": {
+    "Endpoint": "",
+    "ApiKey": "",
+    "DeploymentName": ""
   }
 }
